--- a/frontend/src/head.css
+++ b/frontend/src/head.css
@@ -17,8 +17,8 @@
 
 .head_title{
     position: absolute;
-    width: 373px;
-    height: 42px;
+    width: 30%;
+    height: 90%;
     left: calc(50% - 373px/2 - 21.5px);
     top: calc(50% - 42px/2 - 0.5px);
 
@@ -27,16 +27,16 @@
 }
 
 .head_title_txt{
-    position: absolute;
+position: absolute;
 width: 125px;
 height: 19px;
-left: 876px;
-top: 27px;
+left: 44%;
+top: 30%;
 
 font-family: 'Inter';
 font-style: normal;
-font-weight: 400;
-font-size: 16px;
+font-weight: bold;
+font-size: 0.9em;
 line-height: 19px;
 /* display: flex; */
 align-items: center;
@@ -45,18 +45,27 @@ text-align: center;
 
 .arrow_right{
     position: absolute;
-    width: 37px;
-    height: 37px;
-    left: 1088px;
-    top: 18px;
-    font-size: 20px;
+    width: 2em;
+    height: 2em;
+    left: 61%;
+    top: 10%;
+    font-size: 1.5em;
+    vertical-align: middle;
 }
 
 .arrow_left{
     position: absolute;
-    width: 37px;
-    height: 37px;
-    left: 762px;
-    top: 18px;
-    font-size: 20px;
+    width: 1em;
+    height: 1em;
+    left: 35%;
+    top: 10%;
+    font-size: 1.5em;
+    align-items: center;
+}
+
+.arrow_show_left:hover{
+    display:contents;
+}
+.arrow_show_right:hover{
+    display:contents;
 }
