--- a/frontend/src/editor.css
+++ b/frontend/src/editor.css
@@ -151,8 +151,10 @@ border: 1px solid #000000;
 .save_row{
     position:absolute;
     display:flex;
-    left: 65%;
+    right: 3vw;
     align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
 .save_slot{
@@ -163,8 +165,12 @@ border: 1px solid #000000;
 
 .save_header{
     color:white;
-    font-size: 1.6em;
+    font-size: 1.7em;
     font-weight: 700;
+}
+.save_header:hover{
+    cursor: pointer;
+    color: wheat;
 }
 
 
