--- a/frontend/src/head.css
+++ b/frontend/src/head.css
@@ -18,7 +18,7 @@
 .head_title{
     position: absolute;
     width: 30%;
-    height: 90%;
+    height: 100%;
     left: calc(50% - 373px/2 - 21.5px);
     top: calc(50% - 42px/2 - 0.5px);
 
@@ -26,22 +26,22 @@
     border-radius: 16px;
 }
 
+
+
 .head_title_txt{
 position: absolute;
-width: 125px;
-height: 19px;
-left: 44%;
-top: 30%;
-
+width: 20%;
+left: 39%;
+background:#D9D9D9;
 font-family: 'Inter';
 font-style: normal;
 font-weight: bold;
-font-size: 0.9em;
-line-height: 19px;
-/* display: flex; */
-align-items: center;
+font-size: 0.5em;
 text-align: center;
+padding-bottom: 2%;
 }
+
+
 
 .arrow_right{
     position: absolute;
@@ -69,3 +69,5 @@ text-align: center;
 .arrow_show_right:hover{
     display:contents;
 }
+
+
