--- a/frontend/src/editor.css
+++ b/frontend/src/editor.css
@@ -8,9 +8,8 @@
     top: 8vh;
     border-radius: 0px;
 
-
-background: #2D3242;
-border: 1px solid #000000;
+    background: #2D3242;
+    border: 1px solid #000000;
 }
 
 .editor_code{
@@ -44,6 +43,10 @@ border: 1px solid #000000;
     color: #FFFFFF;
 
     border: 1px solid #000000;
+}
+
+.tools{
+    display: flex;
 }
 
 .execute{
@@ -161,6 +164,10 @@ border: 1px solid #000000;
     font-size: 1.7em;
     margin-left: 15%;
     color: white;
+}
+
+.save_slot:hover{
+    cursor: pointer;
 }
 
 .save_header{
