--- a/frontend/src/head.css
+++ b/frontend/src/head.css
@@ -1,5 +1,5 @@
 .section_head{
-
+    display: flex;
     box-sizing: border-box;
     position: absolute;
     width: inherit;
@@ -35,4 +35,19 @@
     justify-content: center;
 }
 
+.head_title_txt{
+    position: absolute;
+    width: auto;
+    height: 6vh;
+    /* left: 50vw; */
+    top : 15%;
+    background:#D9D9D9;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 0.5em;
+    text-align: center;
+    padding-bottom: 2%;
+    border-radius: 5px;
+}
 
