--- a/frontend/src/problem.css
+++ b/frontend/src/problem.css
@@ -1,6 +1,6 @@
 .section_problem{
     position: absolute;
-    width: 50%;
+    width: 30%;
     height: 92vh;
     left: 0px;
     top: 8vh;
@@ -39,7 +39,55 @@
 
 .problem_desc{
     position: absolute;
-    top: 15vh;
+    top: 8vh;
     text-indent: 20px;
     color: white;
+}
+.open_test_case{
+    position: absolute;
+    bottom: 0vh;
+    color: white;
+    width: 100%;
+}
+.open_test_case *{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.open_test_case li{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    height: 15vh;
+    
+}
+.TC_head{
+    color: white;
+    font-size: 23px;
+    font-weight: 700;
+    text-indent: 3vw;
+    /* background-color: red; */
+    border-width: 1px 0px 1px 0px;
+    border-color: black;
+    border-style: solid;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+}
+.tc_each_head{
+    background-color: rgb(18, 17, 61);
+    text-indent: 20px;
+}
+nav{
+    float: right;
+}
+p{
+    cursor: pointer;
+}
+.tc_flex{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-bottom: 10px black;
 }
