--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,7 @@
 .App{
   margin: 0;
-  width: 100vw;
-  height: 90vh;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
   min-height: (100vh - 3.125rem - 24.625rem - 5rem);
 }
